# static/openapi/registry.yaml
@@ -4221,6 +4221,15 @@ paths:
                 properties:
                   type: array
                   items: {}
+                formats:
+                  type: array
+                  items: {}
+                placements:
+                  type: array
+                  items: {}
+                placement_tags:
+                  type: object
+                  additionalProperties: {}
               required:
                 - authorized_agents
       responses:
